--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,20 @@ code {
     monospace;
 }
 
-
 /* --------- Fonts ------------------------------------- */
+@font-face {
+  font-family: 'Coolvetica';
+  src: url('./fonts/coolvetica-it.otf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Coolvetica';
+  src: url('./fonts/coolvetica-rg.otf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 /* inter-regular */
 @font-face {
@@ -23,7 +35,7 @@ code {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  src: url("fonts/Inter-Regular.ttf") format('ttf')
+  src: url('fonts/Inter-Regular.ttf') format('ttf');
 }
 
 /* inter-500 */
@@ -32,7 +44,7 @@ code {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
-  src: url("fonts/Inter-Medium.ttf") format('ttf')
+  src: url('fonts/Inter-Medium.ttf') format('ttf');
 }
 
 /* inter-600 - latin */
@@ -41,7 +53,7 @@ code {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 600;
-  src: url("fonts/Inter-SemiBold.ttf") format('ttf')
+  src: url('fonts/Inter-SemiBold.ttf') format('ttf');
 }
 
 /* inter-700 - latin */
@@ -50,7 +62,7 @@ code {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
-  src: url("fonts/Inter-Bold.ttf") format('ttf')
+  src: url('fonts/Inter-Bold.ttf') format('ttf');
 }
 
 /* Poppins-regular */
@@ -59,7 +71,7 @@ code {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
-  src: url("fonts/Poppins-Regular.ttf") format('ttf')
+  src: url('fonts/Poppins-Regular.ttf') format('ttf');
 }
 
 /* Poppins-medium */
@@ -68,7 +80,7 @@ code {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
-  src: url("fonts/Poppins-Medium.ttf") format('ttf')
+  src: url('fonts/Poppins-Medium.ttf') format('ttf');
 }
 
 /* --------- Fonts ------------------------------------- */
